WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97677
Web Inspector: display stack of last layout invalidation instead of first one
https://bugs.webkit.org/show_bug.cgi?id=97677
Summary
Web Inspector: display stack of last layout invalidation instead of first one
Andrey Kosyakov
Reported
2012-09-26 06:46:12 PDT
Inspector's timeline agent used to send only first layout invalidation to front-end, so we displayed first JS stack as the reason for re-layout. It's probably more useful to display the last one, as the scope of layout is expanded, hence the last one has a good chances to be the one with larger impact. Ultimately, we should probably aggregate these and find a way to visualize many stacks.
Attachments
Patch
(2.75 KB, patch)
2012-09-26 06:59 PDT
,
Andrey Kosyakov
vsevik
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrey Kosyakov
Comment 1
2012-09-26 06:59:04 PDT
Created
attachment 165793
[details]
Patch
Andrey Kosyakov
Comment 2
2012-09-26 08:04:43 PDT
Committed
r129645
: <
http://trac.webkit.org/changeset/129645
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug