Web Inspector: display stack of last layout invalidation instead of first one https://bugs.webkit.org/show_bug.cgi?id=97677

Reviewed by Vsevolod Vlasov.

- add a call to InspectorInstrumentation::didInvalidateLayout() when upgrading relayout root;
- do not suppress timeline's Invalidate Layout records other than first.

* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::didInvalidateLayout):
* page/FrameView.cpp:
(WebCore::FrameView::scheduleRelayoutOfSubtree):

Canonical link: https://commits.webkit.org/115661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129645 268f45cc-cd09-0410-ab3c-d52691b4dbfc